--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -16,6 +16,7 @@ renames:
   P2: Effekt EM Thruster 2 (kW)
   P3: Effekt EM Thruster 3 (kW)
   P4: Effekt EM Thruster 4 (kW)
+  P: 'Effekt EM Thruster Total (kW)'
   cog: Kurs över grund (deg)
   sin_pm1: Sin EM1 ()
   sin_pm2: Sin EM2 ()
@@ -53,3 +54,8 @@ trip_separator: 0 days 00:00:20
 ## Clean statistics:
 min_distance: 4000
 min_time: 700
+
+## clean_thrusters_node
+P_max_ratio_diff: 0.3
+cos_ratio_diff: 0.3
+
