--- a/conf/base/catalog_tycho.yml
+++ b/conf/base/catalog_tycho.yml
@@ -5,8 +5,8 @@
 
 tycho.raw_data:
   type: pandas.CSVDataSet
-  #filepath: E:/dev/datadriven-energieffektivisering-av-fartyg/data/raw/2021-07-01-forsea-vind/tycho-brahe-wind-2021-04-10--2021-06-30.csv
-  filepath: data/01_raw/test/tycho-brahe-wind-2021-04-10--2021-06-30.csv
+  filepath: E:/dev/datadriven-energieffektivisering-av-fartyg/data/raw/2021-07-01-forsea-vind/tycho-brahe-wind-2021-04-10--2021-06-30.csv
+  #filepath: data/01_raw/test/tycho-brahe-wind-2021-04-10--2021-06-30.csv
 
 
 tycho.preprocessed_data:
@@ -73,10 +73,22 @@ tycho.trip_statistics_joined_thrusters_test:
   filepath: data/05_model_input/tycho_trip_statistics_joined_thrusters_test
     
 
+#This don't work...
+#tycho.trip_statistics_joined_thrusters_linear_regression_model:
+#  type: kedro_mlflow.io.models.MlflowModelSaverDataSet
+#  flavor: mlflow.sklearn
+#  filepath: data/06_models/tycho_trip_statistics_joined_thrusters_linear_regression_model
+#  version: 0.17.5
+
 tycho.trip_statistics_joined_thrusters_linear_regression_model:
-  type: pickle.PickleDataSet
-  filepath: data/06_models/tycho_trip_statistics_joined_thrusters_linear_regression_model
-    
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataSet
+  data_set:
+    type: pickle.PickleDataSet
+    filepath: data/06_models/tycho_trip_statistics_joined_thrusters_linear_regression_model.pkl
+
+tycho.rmse:
+    type: kedro_mlflow.io.metrics.MlflowMetricDataSet
+    key: rmse
 
 tycho.trip_statistics_joined_thrusters_linear_regression_prediction:
   type: pandas.ParquetDataSet
