Splitted the pipelines in smaller ones so that modular pipelines can be joined arbitrary to customize for Uraniborg.

--- a/conf/base/catalog/catalog.yml
+++ b/conf/base/catalog/catalog.yml
@@ -7,8 +7,11 @@
 {% for name in ['tycho','aurora','uraniborg'] %}
 
 {{ name }}.raw_data:
-  type: pandas.CSVDataSet
-  filepath: ${raw_data.{{ name }}}  # (Defined in globals.yml)
+  type: PartitionedDataSet
+  dataset:
+    type: pandas.CSVDataSet
+  path: ${raw_data.{{ name }}}  # (Defined in globals.yml)
+  filename_suffix: ".csv"
     
 {{ name }}.preprocessed_data:
   type: pandas.ParquetDataSet
