--- a/conf/base/globals.yml
+++ b/conf/base/globals.yml
@@ -1,6 +1,6 @@
 raw_data:
   #aurora: data/01_raw/test/aurora-wind-2021-04-10--2021-06-30.csv  # (for debugging)
-  aurora: E:/dev/datadriven-energieffektivisering-av-fartyg/data/raw/2021-07-01-forsea-vind/aurora-wind-2021-04-10--2021-06-30.csv
+  aurora: E:/dev/datadriven-energieffektivisering-av-fartyg/data/raw/2021-07-01-forsea-vind/aurora-wind-2021-04-10--2021-06-30
   #tycho: data/01_raw/test/tycho-brahe-wind-2021-04-10--2021-06-30.csv # (for debugging)
-  tycho: E:/dev/datadriven-energieffektivisering-av-fartyg/data/raw/2021-07-01-forsea-vind/tycho-brahe-wind-2021-04-10--2021-06-30.csv
-  uraniborg: data/01_raw/uraniborg-2021-04-21--2021-07-20/uraniborg-1s-2021-05-21--2021-06-20.csv
+  tycho: E:/dev/datadriven-energieffektivisering-av-fartyg/data/raw/2021-07-01-forsea-vind/tycho-brahe-wind-2021-04-10--2021-06-30
+  uraniborg: data/01_raw/uraniborg-2021-04-21--2021-07-20
