Rerun with correct periods.

--- a/conf/base/parameters/parameters.yml
+++ b/conf/base/parameters/parameters.yml
@@ -9,6 +9,7 @@ min_speed: 0.01
 renames:
   Tidpunkt [UTC]: time
   UTC time: time 
+  Timestamp: time
   Latitud (deg): latitude
   Latitude (deg): latitude
   Longitud (deg): longitude
