--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -83,6 +83,7 @@ click==7.1.2
     #   databricks-cli
     #   distributed
     #   flask
+    #   geobuf
     #   jupyter-book
     #   kedro
     #   kedro-telemetry
@@ -113,11 +114,16 @@ cycler==0.11.0
 dash==2.2.0
     # via
     #   -r E:\dev\d2e2f\src\requirements.in
+    #   dash-extensions
     #   jupyter-dash
 dash-core-components==2.0.0
     # via dash
+dash-extensions==0.0.71
+    # via -r E:\dev\d2e2f\src\requirements.in
 dash-html-components==2.0.0
     # via dash
+dash-leaflet==0.1.23
+    # via -r E:\dev\d2e2f\src\requirements.in
 dash-table==5.0.0
     # via dash
 dask[complete,distributed]==2021.11.1
@@ -155,6 +161,8 @@ docutils==0.16
     #   sphinxcontrib-bibtex
 dynaconf==3.1.5
     # via kedro
+editorconfig==0.12.3
+    # via jsbeautifier
 entrypoints==0.3
     # via
     #   jupyterlab-server
@@ -166,10 +174,13 @@ flake8==3.9.2
 flask==2.0.3
     # via
     #   dash
+    #   flask-caching
     #   flask-compress
     #   jupyter-dash
     #   mlflow
     #   prometheus-flask-exporter
+flask-caching==1.10.1
+    # via dash-extensions
 flask-compress==1.11
     # via dash
 folium==0.12.1.post1
@@ -178,6 +189,8 @@ fsspec==2021.11.0
     # via
     #   dask
     #   kedro
+geobuf==1.1.1
+    # via dash-leaflet
 gitdb==4.0.9
     # via gitpython
 gitpython==3.1.24
@@ -279,6 +292,8 @@ jmespath==0.10.0
     # via kedro
 joblib==1.1.0
     # via scikit-learn
+jsbeautifier==1.14.0
+    # via dash-extensions
 json5==0.9.6
     # via jupyterlab-server
 jsonschema==3.2.0
@@ -302,6 +317,7 @@ jupyter-client==6.1.12
     #   nbclient
     #   notebook
     #   qtconsole
+    #   voila
 jupyter-console==6.4.0
     # via jupyter
 jupyter-core==4.9.1
@@ -322,6 +338,7 @@ jupyter-server==1.11.2
     #   jupyterlab-server
     #   nbclassic
     #   nbdime
+    #   voila
 jupyter-server-mathjax==0.2.5
     # via nbdime
 jupyter-sphinx==0.3.2
@@ -333,7 +350,9 @@ jupyterlab==3.2.2
 jupyterlab-pygments==0.1.2
     # via nbconvert
 jupyterlab-server==2.8.2
-    # via jupyterlab
+    # via
+    #   jupyterlab
+    #   voila
 jupyterlab-templates==0.3.1
     # via -r E:\dev\d2e2f\src\requirements.in
 jupyterlab-widgets==1.0.2
@@ -385,6 +404,8 @@ mistune==0.8.4
     # via nbconvert
 mlflow==1.24.0
     # via -r E:\dev\d2e2f\src\requirements.in
+more-itertools==8.12.0
+    # via dash-extensions
 mpmath==1.2.1
     # via sympy
 msgpack==1.0.2
@@ -404,13 +425,15 @@ nbclient==0.5.5
     #   jupyter-cache
     #   nbconvert
     #   papermill
-nbconvert==6.2.0
+    #   voila
+nbconvert==6.4.2
     # via
     #   jupyter
     #   jupyter-server
     #   jupyter-sphinx
     #   myst-nb
     #   notebook
+    #   voila
 nbdime==3.1.1
     # via jupyter-cache
 nbformat==5.1.3
@@ -507,7 +530,9 @@ pillow==8.4.0
 pip-tools==5.5.0
     # via kedro
 plotly==5.6.0
-    # via dash
+    # via
+    #   -r E:\dev\d2e2f\src\requirements.in
+    #   dash
 pluggy==0.13.1
     # via
     #   kedro
@@ -526,7 +551,9 @@ prompt-toolkit==3.0.22
     #   ipython
     #   jupyter-console
 protobuf==3.19.4
-    # via mlflow
+    # via
+    #   geobuf
+    #   mlflow
 psutil==5.8.0
     # via distributed
 py==1.11.0
@@ -673,6 +700,8 @@ six==1.16.0
     #   bleach
     #   cookiecutter
     #   databricks-cli
+    #   geobuf
+    #   jsbeautifier
     #   jsonschema
     #   latexcodec
     #   multipledispatch
@@ -817,6 +846,7 @@ traitlets==5.1.1
     #   nbformat
     #   notebook
     #   qtconsole
+    #   voila
 typed-ast==1.4.3
     # via black
 typing-extensions==3.10.0.2
@@ -833,6 +863,8 @@ uc-micro-py==1.0.1
     # via linkify-it-py
 urllib3==1.26.7
     # via requests
+voila==0.3.2
+    # via -r E:\dev\d2e2f\src\requirements.in
 waitress==2.0.0
     # via mlflow
 wcwidth==0.2.5
@@ -843,6 +875,8 @@ websocket-client==1.2.1
     # via
     #   docker
     #   jupyter-server
+websockets==10.2
+    # via voila
 werkzeug==2.0.3
     # via flask
 wheel==0.36.2
