--- a/conf/base/parameters/load_datavarde.yml
+++ b/conf/base/parameters/load_datavarde.yml
@@ -10,3 +10,8 @@ ssrs.excludes:
   - ENGINETEMP
   - TOTALENGINEHOURS
   - EngineOilPressure
+
+
+resample_period: 1 # [s] Period to resample all the measurements for syncing
+moving_min_speed: 0.05 # [m/s] Minimum speed that be considered as the ship is moving at all
+running_min_speed: 1.0 # [m/s] Minimum speed that be considered as running 
