--- a/docs/ssrs/_toc.yml
+++ b/docs/ssrs/_toc.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: intro
+root: 01.01_introduction
 chapters:
-- file: 07.04_uraniborg_savings
-- file: summary
+- file: 02.01_method
+- file: 03.01_results
