--- a/docs/ssrs/_config.yml
+++ b/docs/ssrs/_config.yml
@@ -1,8 +1,8 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Energy saving SSRS
-author: D2E2F
+title: Fuel saving potential SSRS
+author: Data Driven Energy Efficiency of Ships (D2E2F)
 logo: logo.png
 
 # Force re-execution of notebooks on each build.
@@ -13,7 +13,7 @@ execute:
 # Define the name of the latex output file for PDF builds
 latex:
   latex_documents:
-    targetname:  Energy saving SSRS.tex
+    targetname:  Fuel_saving_potential_SSRS.tex
 
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
@@ -30,3 +30,50 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+
+sphinx:
+  config:
+    html_js_files:
+    - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js  # To enable plotly plot
+    #mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js  # Faster math?
+    latex_engine: xelatex
+    #latex_elements:
+    #  papersize: ""
+    #  fontpkg: ""
+    #  fncychap: ""
+    #  maketitle: ""
+    #  pointsize: ""
+    #  preamble: ""
+    #  releasename: ""
+    #  babel: ""
+    #  printindex: ""
+    #  fontenc: ""
+    #  inputenc: ""
+    #  classoptions: ""
+    #  utf8extra: ""
+    #  maketitle: ""
+    #  tableofcontents: ""
+    #  figure_align: H
+    #latex_docclass:
+    #  howto: review
+    #  manual: elsarticle
+    nb_render_priority:
+      latex:
+        - "image/pdf"
+        - "application/pdf"
+        - "image/svg"
+        - "image/png"
+        - "image/jpeg"
+        - "text/latex"
+        - "text/markdown"
+        - "text/plain" 
+    nb_mime_priority_overrides:
+      - - latex
+        - "image/svg+xml"
+        - 15
+      - - latex
+        - "image/pdf"
+        - 16
+
+  extra_extensions:
+    - "sphinx.ext.imgconverter"
