--- a/conf/base/globals.yml
+++ b/conf/base/globals.yml
@@ -6,3 +6,4 @@ raw_data:
   #uraniborg: data/01_raw/uraniborg-2021-04-21--2021-07-20
   #uraniborg: data/01_raw/uraniborg10s
   uraniborg: data/01_raw/uraniborg-2021-01-14--2022-01-13
+  vitaskar: data/01_raw/vitaskär
