--- a/conf/base/parameters/vitskär.yml
+++ b/conf/base/parameters/vitskär.yml
@@ -3,3 +3,6 @@ vitaskar.P_max: None  # [kW]
 vitaskar.min_distance: 6000
 vitaskar.min_time: 800
 vitaskar.max_time: 1800
+
+vitaskar.load_start: 2022-01-01
+vitaskar.load_end: 2022-10-18
