--- a/conf/base/parameters/vitskär.yml
+++ b/conf/base/parameters/vitskär.yml
@@ -6,3 +6,7 @@ vitaskar.max_time: 1800
 
 vitaskar.load_start: 2022-01-01
 vitaskar.load_end: 2022-10-18
+
+vitaskar.harbours:
+  - Norgersund 
+  - Hanö
